# pilota

./: .gitignore  COMMENT_PRESERVATION_IMPLEMENTATION.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE-MIT  README.md  SALSA_UPGRADE_SUMMARY.md  SECURITY.md  SUPPORT.md  comment_demo_codegen  rustfmt.toml  salsa_cache_implementation.md  salsa_caching_example.md  salsa_upgrade_summary.md
examples/: Cargo.toml  build.rs
examples/idl/: base.thrift  custom_options.proto  fieldmask.thrift  no_service.thrift  pilota.proto  serde_pb.proto  zero_value.proto
examples/src/: fieldmask.rs  lib.rs  zero_value.rs
pilota/: Cargo.toml  README.md
pilota-build/: COMMENT_FEATURE_SUMMARY.md  Cargo.toml  README.md  SALSA_UPGRADE_COMPLETE.md  SALSA_UPGRADE_SUMMARY.md  test_comments.thrift
pilota-build-v2/: Cargo.toml  PROGRESS.md  README.md  SUMMARY.md  test.thrift
pilota-build-v2/crates/pilota-build-common/: Cargo.toml
pilota-build-v2/crates/pilota-build-core/: Cargo.toml
pilota-build-v2/crates/pilota-build-diagnostics/: Cargo.toml
pilota-build-v2/crates/pilota-build-examples/: Cargo.toml
pilota-build-v2/crates/pilota-build-hir/: Cargo.toml
pilota-build-v2/crates/pilota-build-lir/: Cargo.toml
pilota-build-v2/crates/pilota-build-mir/: Cargo.toml
pilota-build-v2/crates/pilota-build-parser/: Cargo.toml
pilota-build-v2/crates/pilota-build-plugin/: Cargo.toml
pilota-build-v2/crates/pilota-build-test-utils/: Cargo.toml
pilota-build-v2/crates/pilota-build-types/: Cargo.toml
pilota-build-v2/examples/: basic.rs
pilota-build/benches/: codegen.rs  unknown.rs  unknown_pb.rs  unknown_pb_new.rs
pilota-build/examples/: comment_test.rs  salsa_cache_demo.rs
pilota-build/proto/: pilota.proto
pilota-build/src/: db.rs  dedup.rs  fmt.rs  index.rs  lib.rs  resolve.rs  symbol.rs  tags.rs  util.rs
pilota-build/src/codegen/: mod.rs  pkg_tree.rs  toml.rs  traits.rs  workspace.rs
pilota-build/src/db/: cached_queries.rs  salsa_ids.rs
pilota-build/src/errors/: mod.rs
pilota-build/src/ir/: mod.rs  visit.rs
pilota-build/src/middle/: adjust.rs  context.rs  mod.rs  resolver.rs  rir.rs  root_selector.rs  ty.rs  type_graph.rs  workspace_graph.rs
pilota-build/src/parser/: mod.rs
pilota-build/src/plugin/: mod.rs  serde.rs  workspace.rs
pilota-build/src/test/: enum_key_map_tests.rs  mod.rs
pilota-build/test_data/: custom_options.rs  duplicate_field_id.thrift  must_gen_items.rs  must_gen_items.thrift  unknown_fields.rs  unknown_fields.rs.bak  unknown_fields.thrift  unknown_fields_pb.proto  unknown_fields_pb.rs  unknown_fields_pb_new.rs
pilota-build/test_data/plugin/: serde.rs  serde.thrift  serde_pb.proto  serde_pb.rs
pilota-build/test_data/protobuf/: bytes.new_pb.rs  bytes.proto  bytes.rs  bytes_vec.rs  default.proto  default.rs  nested_message.new_pb.rs  nested_message.proto  nested_message.rs  no_service.proto  no_service.rs  normal.new_pb.rs  normal.proto  normal.rs  oneof.new_pb.rs  oneof.proto  oneof.rs  optional.new_pb.rs  optional.proto  optional.rs  protobuf_options_reference.new_pb.rs  protobuf_options_reference.proto  protobuf_options_reference.rs  repeated_nonpackable.proto  repeated_nonpackable.rs  repeated_numeric.proto  repeated_numeric.rs  repeated_numeric_proto2.proto  repeated_numeric_proto2.rs  service.new_pb.rs  service.rs  string.new_pb.rs  string.proto  string.rs
pilota-build/test_data/protobuf_with_descriptor/: message..rs  message.proto  message.rs  nested.proto  nested.rs  oneof.proto  oneof.rs
pilota-build/test_data/protobuf_with_split/: service.proto  service.rs
pilota-build/test_data/thrift/: ahash.rs  ahash.thrift  apache.rs  apache.thrift  auto_name.rs  auto_name.thrift  binary_bytes.rs  binary_bytes.thrift  binary_vec.rs  btree.rs  btree.thrift  comment_test.rs  comment_test.thrift  comments.rs  comments.thrift  const_val.rs  const_val.thrift  decode_error.rs  decode_error.thrift  default_value.rs  default_value.rs.bak  default_value.thrift  enum_map.rs  enum_map.thrift  enum_test.rs  enum_test.thrift  multi.rs  multi.thrift  no_service.rs  no_service.thrift  normal.rs  normal.rs.bak  normal.thrift  optional_parameter.rs  optional_parameter.thrift  path_keyword.rs  path_keyword.thrift  pilota_name.rs  pilota_name.thrift  recursive_type.rs  (+19 more)
pilota-build/test_data/thrift_with_field_mask/: complex_enum_key_map.rs  complex_enum_key_map.thrift  enum_key_map.rs  enum_key_map.thrift  struct_init_with_field_mask.rs  struct_init_with_field_mask.thrift
pilota-build/test_data/thrift_with_split/: wrapper_arc.rs  wrapper_arc.thrift
pilota-build/test_data/thrift_with_split_case_sensitive/: wrapper_arc.thrift
pilota-build/tests/: pb_default.rs
pilota-thrift-fieldmask/: Cargo.toml  README.md
pilota-thrift-fieldmask/benches/: get_path.rs
pilota-thrift-fieldmask/src/: fieldmask.rs  lib.rs  path.rs
pilota-thrift-parser/: Cargo.toml  README.md
pilota-thrift-parser/.cargo/: config.toml
pilota-thrift-parser/examples/: test_comments.rs
pilota-thrift-parser/src/: lib.rs
pilota-thrift-parser/src/descriptor/: annotation.rs  constant.rs  enum_.rs  field.rs  function.rs  identifier.rs  include.rs  literal.rs  mod.rs  namespace.rs  service.rs  struct_.rs  ty.rs  typedef.rs
pilota-thrift-parser/src/parser/: annotation.rs  constant.rs  enum_.rs  error.rs  field.rs  function.rs  identifier.rs  include.rs  literal.rs  mod.rs  namespace.rs  service.rs  struct_.rs  thrift.rs  ty.rs  typedef.rs
pilota-thrift-reflect/: Cargo.toml  build.rs
pilota-thrift-reflect/examples/: Cargo.toml  main.rs
pilota-thrift-reflect/examples/idl/: apache.thrift
pilota-thrift-reflect/idl/: descriptor.thrift
pilota-thrift-reflect/src/: descriptor.rs  error.rs  lib.rs  service.rs
pilota/benches/: faststr.rs  pb.rs  pb_if_not_default.rs  skip.rs  thrift_binary.rs  ttype.rs
pilota/examples/: test.rs
pilota/proptest-regressions/pb/: encoding.txt
pilota/src/: lib.rs
pilota/src/pb/: README.md  descriptor_getter.rs  encoding.rs  error.rs  extension.rs  getter.rs  message.rs  mod.rs  types.rs
pilota/src/prost/: README.md  encoding.rs  error.rs  message.rs  (+2 more)
(+176 files in other folders)
