[package]
name = "examples"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pilota = { path = "../pilota", features = ["pb-encode-default-value"] }
pilota-build = { path = "../pilota-build" }
pilota-thrift-fieldmask = { path = "../pilota-thrift-fieldmask" }
pilota-thrift-reflect = { path = "../pilota-thrift-reflect" }
