[package]
name = "examples"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pilota = { path = "../pilota", features = ["pb-encode-default-value"] }
pilota-thrift-fieldmask = { path = "../pilota-thrift-fieldmask" }
pilota-thrift-reflect = { path = "../pilota-thrift-reflect" }
linkedbytes.workspace = true

[build-dependencies]
pilota-build = { path = "../pilota-build" }
