[workspace]
members = [
    "crates/pilota-build-core",
    "crates/pilota-build-hir",
    "crates/pilota-build-mir",
    "crates/pilota-build-lir",
    "crates/pilota-build-diagnostics",
    "crates/pilota-build-plugin",
    "crates/pilota-build-types",
    "crates/pilota-build-common",
    "crates/pilota-build-test-utils",
    "crates/pilota-build-parser",
    "crates/pilota-build-examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Pilota Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudwego/pilota"

[workspace.dependencies]
# 核心依赖
tokio = { version = "1.35", features = ["full"] }
salsa = "0.23"
rayon = "1.8"
dashmap = "5.5"
rustc-hash = "1.1"
parking_lot = "0.12"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 代码生成
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"

# 测试
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.34"
tempfile = "3.8"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 工具
once_cell = "1.19"
indexmap = "2.1"
petgraph = "0.6"
typed-arena = "2.0"
smallvec = "1.11"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true