[package]
name = "pilota-build"
version = "0.12.12"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Compile thrift and protobuf idl into rust code at compile-time."
documentation = "https://docs.rs/pilota-build"
readme = "README.md"
keywords = ["serialization", "thrift", "protobuf", "volo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pilota = { path = "../pilota", version = "0.12" }
pilota-thrift-parser = { path = "../pilota-thrift-parser", version = "0.12" }
pilota-thrift-reflect = { path = "../pilota-thrift-reflect", version = "0.1" }

ahash.workspace = true
anyhow.workspace = true
dashmap.workspace = true
faststr.workspace = true
heck.workspace = true
hex.workspace = true
itertools.workspace = true
normpath.workspace = true
paste.workspace = true
petgraph.workspace = true
phf.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rayon.workspace = true
rand.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
scoped-tls.workspace = true
serde.workspace = true
serde_yaml.workspace = true
syn.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

protobuf-parse.workspace = true
protobuf.workspace = true

[dev-dependencies]
pilota-thrift-fieldmask = { path = "../pilota-thrift-fieldmask" }

tokio.workspace = true
tempfile.workspace = true
diffy.workspace = true
criterion.workspace = true
rand.workspace = true
linkedbytes.workspace = true

[[bench]]
name = "codegen"
harness = false

[[bench]]
name = "unknown"
harness = false

[[bench]]
name = "unknown_pb"
harness = false

[[bench]]
name = "unknown_pb_new"
harness = false

[[example]]
name = "salsa_cache_demo"
path = "examples/salsa_cache_demo.rs"
