[package]
name = "pilota-thrift-fieldmask"
version = "0.1.3"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Fieldmask support for Pilota"
documentation = "https://docs.rs/pilota-thrift-fieldmask"
readme = "README.md"
categories = ["encoding"]
keywords = ["fieldmask", "pilota"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pilota = { path = "../pilota", version = "0.12" }
pilota-thrift-parser = { path = "../pilota-thrift-parser", version = "0.12" }
pilota-thrift-reflect = { path = "../pilota-thrift-reflect", version = "0.1" }

ahash.workspace = true
ariadne.workspace = true
faststr.workspace = true
thiserror.workspace = true
serde.workspace = true
chumsky.workspace = true
