[package]
name = "pilota-thrift-parser"
version = "0.13.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pilota thrift Parser."
documentation = "https://docs.rs/pilota-thrift-parser"
readme = "README.md"
categories = ["encoding"]
keywords = ["serialization", "thrift", "parser"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
ariadne.workspace = true
bytes.workspace = true
chumsky.workspace = true
faststr.workspace = true
thiserror.workspace = true
