[package]
name = "pilota-thrift-reflect"
version = "0.0.1"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Reflect support for Pilota"
documentation = "https://docs.rs/pilota-thrift-reflect"
readme = "README.md"
categories = ["encoding"]
keywords = ["reflect", "pilota"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pilota = { path = "../pilota", version = "0.12" }
pilota-thrift-parser = { path = "../pilota-thrift-parser", version = "0.12" }

ahash.workspace = true
bytes.workspace = true
dashmap.workspace = true
faststr.workspace = true
thiserror.workspace = true

[build-dependencies]
# pilota-build = { path = "../pilota-build" }
