[package]
name = "pilota"
version = "0.7.0"
edition = "2021"
description = "Pilota is a thrift and protobuf implementation in pure rust with high performance and extensibility."
documentation = "https://docs.rs/pilota"
readme = "README.md"
homepage = "https://cloudwego.io/docs/pilota/"
repository = "https://github.com/cloudwego/pilota"
license = "MIT OR Apache-2.0"
authors = ["Pilota Team <pilota@cloudwego.io>"]
categories = ["encoding"]
keywords = ["serialization", "thrift", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
paste = "1"
bytes = { version = "1", features = ["serde"] }
async-trait = "0.1"
async-recursion = "1"
tokio = { version = "1", features = ["io-util"] }
lazy_static = "1"
linkedbytes = "0.1"
derivative = "2"
anyhow = "1"
thiserror = "1"
faststr = { version = "0.2", features = ["serde"] }
integer-encoding = { version = "3", features = [
    "async-trait",
    "tokio",
    "tokio_async",
] }
proptest = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "faststr"
harness = false

[[bench]]
name = "thrift_binary"
harness = false
