[package]
name = "pilota"
version = "0.11.9"
edition = "2024"
description = "Pilota is a thrift and protobuf implementation in pure rust with high performance and extensibility."
documentation = "https://docs.rs/pilota"
readme = "README.md"
homepage = "https://cloudwego.io/docs/pilota/"
repository = "https://github.com/cloudwego/pilota"
license = "MIT OR Apache-2.0"
authors = ["Pilota Team <pilota@cloudwego.io>"]
categories = ["encoding"]
keywords = ["serialization", "thrift", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
paste = "1"
bytes = { version = "1", features = ["serde"] }
async-recursion = "1"
tokio = { version = "1", features = ["io-util"] }
lazy_static = "1"
linkedbytes = "0.1"
anyhow = "1"
thiserror = "1"
faststr = { version = "0.2", features = ["serde"] }
integer-encoding = { version = "4", features = ["tokio", "tokio_async"] }
serde = { version = "1", features = ["derive"] }
smallvec = "1"
ordered-float = { version = "4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1"
rand = "0.8"

[features]
unstable = []
pb-encode-default-value = []

[[bench]]
name = "faststr"
harness = false

[[bench]]
name = "thrift_binary"
harness = false

[[bench]]
name = "skip"
harness = false

[[bench]]
name = "ttype"
harness = false
