[package]
name = "pilota"
version = "0.11.10"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pilota is a thrift and protobuf implementation in pure rust with high performance and extensibility."
documentation = "https://docs.rs/pilota"
readme = "README.md"
categories = ["encoding"]
keywords = ["serialization", "thrift", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = { workspace = true, features = ["serde"] }
anyhow.workspace = true
async-recursion.workspace = true
bytes.workspace = true
faststr = { workspace = true, features = ["serde"] }
integer-encoding.workspace = true
lazy_static.workspace = true
linkedbytes.workspace = true
ordered-float.workspace = true
paste.workspace = true
smallvec.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true

[features]
unstable = []
pb-encode-default-value = []

[[bench]]
name = "faststr"
harness = false

[[bench]]
name = "thrift_binary"
harness = false

[[bench]]
name = "skip"
harness = false

[[bench]]
name = "ttype"
harness = false
