[package]
name = "pilota-build-mir"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pilota-build-common = { path = "../pilota-build-common" }
pilota-build-hir = { path = "../pilota-build-hir" }

rustc-hash = { workspace = true }
serde = { workspace = true }