[package]
name = "pilota-build-plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pilota-build-common = { path = "../pilota-build-common" }

rustc-hash = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }