[dependencies.anyhow]
workspace = true

[dependencies.common]
path = "../common"

[dependencies.pilota]
workspace = true

[dependencies.pilota-thrift-reflect]
workspace = true

[dependencies.volo]
workspace = true

[dependencies.volo-thrift]
workspace = true

[package]
edition = "2024"
name = "author"
version = "0.1.0"
